Fix multisocket, make nodes more legible

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -80,7 +80,7 @@ body,
 
 .connection .main-path {
   stroke-width: 2px;
-  stroke: var(--glow);
+  stroke: #7afba97e;
   filter: drop-shadow(0px 1px 0px var(--dark-0))
     drop-shadow(0px -1px 0px var(--dark-0))
     drop-shadow(-1px 0px 0px var(--dark-0))
